# manw-ng

./: .bandit  .gitignore  CLAUDE.md  DOCS.md  LICENSE  Makefile  README.md  build.py  conftest.py  continuous_url_validator.py  manw-ng.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  version_info.txt  win32_scraper.py  win32_scraper.spec  win32_scraper_static.spec
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  win32-comprehensive-tests.yml
assets/: complete_function_mapping.json  complete_function_mapping.json.backup  complete_function_mapping.json.backup2  comprehensive_test_db.json  win32_api_mapping.json
manw_ng/: __init__.py  cli.py
manw_ng/assets/: win32_api_catalog.json
manw_ng/core/: __init__.py  parser.py  scraper.py  symbol_classifier.py
manw_ng/discovery/: __init__.py  engine.py
manw_ng/execution/: __init__.py  engine.py  memory.py  types.py
manw_ng/ml/: __init__.py  complete_function_mapping.json  enhanced_classifier.py  function_classifier.py  urltran_bert.py
manw_ng/monitoring/: __init__.py  discord_webhook.py  test_webhook.py
manw_ng/output/: __init__.py  formatters.py  simple_formatter.py
manw_ng/utils/: __init__.py  assets.py  catalog_integration.py  complete_win32_api_mapping.py  dll_map.py  http_client.py  known_functions.py  msdocs_scraper.py  smart_url_generator.py  url_pattern_learner.py  url_verifier.py  win32_api_crawler.py  win32_url_patterns.py
scripts/: manw_cli.py  run_tests.py  setup_dev.py
tests/: __init__.py  automated_win32_tests.py  production_stress_test.py  test_cli.py  test_function_name_validation.py  test_manw_ng.py  test_msdocs_scraper.py  test_runner.py  test_scraper_offline.py  test_url_verifier.py  test_win32_scraper.py  test_win32_url_patterns.py  win32_functions_database.py
tests/fixtures/: createfilea.html  virtualalloc.html
