[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manw-ng"
version = "3.4.0"
description = "Windows API documentation scraping with heuristic classification + WinAPI execution engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Marcos Tolosa" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "lxml>=4.9.0",
    "aiohttp>=3.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.urls]
Homepage = "https://github.com/marcostolosa/manw-ng"

[project.scripts]
manw-ng = "manw_ng.cli:main"

[tool.setuptools]
packages = ["manw_ng", "manw_ng.core", "manw_ng.ml", "manw_ng.utils", "manw_ng.output", "manw_ng.execution"]

[tool.setuptools.package-data]
"manw_ng" = ["assets/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
