[metadata]
name = manw-ng
version = 2.0.0
author = Marcos Tolosa
author_email = marcos.tolosa@owasp.org
description = MANW-NG: Win32 API Documentation Scraper (Next Generation)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcostolosa/manw-ng
project_urls =
    Bug Tracker = https://github.com/marcostolosa/manw-ng/issues
    Documentation = https://github.com/marcostolosa/manw-ng#readme
    Source Code = https://github.com/marcostolosa/manw-ng
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: System :: Operating System
    Topic :: Documentation

[options]
python_requires = >=3.8
packages = find:
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    rich>=13.7.0
    lxml>=4.9.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.1
    coverage>=7.3.0
    flake8>=6.1.0
    black>=23.9.1
    mypy>=1.5.1
    types-requests>=2.31.0
    types-beautifulsoup4>=4.12.0
    bandit>=1.7.5
    safety>=2.3.0

[options.entry_points]
console_scripts =
    manw-ng = manw-ng:main

# Flake8 Configuration
[flake8]
max-line-length = 127
extend-ignore = E203, E266, E501, W503
max-complexity = 10
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .coverage,
    htmlcov

# Coverage Configuration
[coverage:run]
source = manw_ng
omit =
    tests/*
    setup.py
    */venv/*
    */virtualenv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if 0:
    if False:

[coverage:html]
directory = htmlcov

# MyPy Configuration
[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True